--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@material-tailwind/react": "^2.1.9",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
+    "apexcharts": "^3.49.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
